# tfhe_instruction_set

./: CMakeLists.txt  README.md  ref_output.txt
sources/: CMakeLists.txt  algos.cpp  algos.h  base_b_keyswitch.cpp  bootstrapping.cpp  bootstrapping.h  instr.cpp  instr.h  instr_16.cpp  instr_16.h  instri.cpp  instri.h  main.cpp  tables.cpp  tables.h  tlwekeyswitch.h
